# mysaas3

./: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  render.yaml  requirements.txt  todo.txt
home/: models.py  urls.py  views.py
home/migrations/: 0001_initial.py
home/templates/home/: faq_page.html  feature_page.html  home_page.html  pricing_page.html  testimonial_page.html
mysaas3/: urls.py  wsgi.py
mysaas3/settings/: base.py  dev.py  production.py  rm_local.py
mysaas3/templates/: base.html
socialapp/: models.py  urls.py  views.py
socialapp/migrations/: 0001_initial.py  0002_initial.py
socialapp/templates/socialapp/: connect_instagram.html  connect_socials.html  report.html
userauth/: models.py  urls.py  views.py
userauth/migrations/: 0001_initial.py
userauth/templates/userauth/: login.html  logout.html  password_reset.html  profile.html  signup.html
wagtail_customization/: __init__.py  apps.py  models.py  urls.py  wagtail_hooks.py
wagtail_customization/migrations/: 0001_initial.py
wagtail_customization/templatetags/: template_tags.py
